# sheets2anki

./: .gitignore  ANALISE_METRICAS_DECK_REMOTO.md  BACKUP_README.md  CHANGELOG.md  CLEANUP_LOGIC_REVIEW.md  CLEANUP_REFATORADO.md  CLEANUP_SUMMARY.md  CORRECAO_DECK_RAIZ.md  CORRECAO_SISTEMA_OPCOES_DECK.md  CORREÇÃO_CAMPOS_METADADOS_FALTANTES.md  CORREÇÃO_CRÍTICA_REMOÇÃO_INDEVIDA.md  CORREÇÃO_CRÍTICA_SINCRONIZAÇÃO_NOTAS.md  CORREÇÃO_GEMINI_IMPLEMENTADA.md  CORREÇÃO_MENSAGEM_CLEANUP.md  CORREÇÃO_META_JSON_CLEANUP.md  CORREÇÃO_MISSING_A.md  DEBUG_SISTEMA_OPCOES.md  DEV_SETUP.md  DIAGNÓSTICO_PROBLEMA_GEMINI.md  DUPLICATION_BUG_FIX.md  FIX_IMPORT_ERROR.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MELHORIAS_NOMEACAO.md  MESSAGE_CONSISTENCY_IMPROVEMENT.md  MISSING_A_IMPLEMENTADO.md  MODIFICAÇÃO_PRESERVAÇÃO_DADOS.md  Qt6_COMPATIBILITY_FIX.md  README.md  README_STUDENT_IMPLEMENTATION.md  REFATORACAO_RESUMO.md  REFATORAÇÃO_VALORES_DEFAULT.md  RELEASE_NOTES_v2.1.0.md  RESUMO_IMPLEMENTACAO_DETALHES.py  RESUMO_VERIFICACAO_CONTAGEM.py  SIMPLIFICACAO_DIALOGO_OPCOES.md  SOLUTION_ROBUST_STUDENT_DETECTION.md  SYNC_HISTORY_BUG_FIX.md  TEMP_IMAGE_PROCESSOR_REDESIGN.md  VSCODE_SETUP.md  (+80 more)
backup_tsv_files/: test_sheet.tsv
docs/: ANALISE_COMPATIBILIDADE.md  ANKIWEB_DESCRIPTION.md  ATUALIZACAO_TESTES.md  CHANGELOG.md  CHANGELOG_URL_SUPPORT.md  COMPATIBILITY.md  CONFIRMACAO_CASE_INSENSITIVE_SYNC.md  CONSOLIDACAO_TSV_COMPLETA.md  CORRECAO_CONTAGEM_DECKS.md  CORRECAO_DOCUMENTACAO_LEVAR_PARA_PROVA.md  CORRECAO_ERROS_FORMULAS.md  CORRECAO_ERRO_ID_CURTO.md  CORRECAO_GEMINI_FORMULA.md  CORRECAO_IMPORTS.md  ESCLARECIMENTO_LEVAR_PARA_PROVA.md  EXTENSAO_ANKIADDON.md  FIX_EXEC_DIALOG.md  FIX_QT_HORIZONTAL.md  GLOBAL_STUDENT_CONFIG.md  ILUSTRACAO_HTML.md  IMPLEMENTACAO_ANKIWEB.md  IMPLEMENTACAO_GLOBAL_STUDENTS.md  LIMPEZA_TSV_COMPLETA.md  MIGRACAO_MANIFEST.md  NAME_CONSISTENCY_SYSTEM.md  OPCOES_COMPARTILHADAS.md  ORGANIZACAO_READMES_COMPLETA.md  ORGANIZACAO_TESTES.md  PREPARACAO_ANKIWEB.md  README.md  REFATORACAO_MODULAR.md  RESUMO_IMPLEMENTACAO_SYNC.md  RESUMO_TESTES_CONSTANTS.md  SINCRONIZACAO_SELETIVA.md  SINCRONIZACAO_SELETIVA_SYNC.md  STUDENT_MANAGEMENT.md  SUMMARY_VISUALIZATION.md  TEMPLATE_UPDATE.md  exemplo_planilha_com_sync.tsv
remote_decks/: column_definitions.py  diffAnkiDecks.py  main.py  parseRemoteDeck.py  test_main.py  test_parseRemoteDeck.py
sample data/: EXEMPLO_ALUNOS.md  README.md  sample_sheet.tsv  sample_sheet_fixed.tsv  test_formula_errors_data.tsv  test_missing_alunos.tsv
scripts/: IMAGE_PROCESSOR_README.md  Makefile  QUICKSTART.md  README.md  build.bat  build.sh  build_packages.py  create_ankiweb_package.py  create_standalone_package.py  diagnose_backup_system.py  prepare_ankiweb.py  test_backup_system.py  test_complete_backup.py  test_connectivity.py  test_corrected_timeout.py  test_simplified_backup.py  test_timeout_fix.py  validate_ankiaddon.py  validate_packages.py  verify_backup_fixes.py
src/: __init__.py  add_deck_dialog.py  ai_assistance_config_dialog.py  ai_help_config_dialog.py  ai_service.py  ankiweb_sync.py  ankiweb_sync_config_dialog.py  backup_dialog.py  backup_manager.py  backup_system.py  card_templates.py  column_definitions.py  compat.py  config.py  config_manager.py  constants.py  data_processor.py  data_removal_confirmation.py  debug_dialog.py  debug_logger.py  deck_manager.py  deck_naming.py  deck_naming_dialog.py  deck_options_config_dialog.py  deck_options_config_dialog_fixed.py  dialogs.py  diffAnkiDecks.py  disconnect_dialog.py  exceptions.py  fix_exec.py  fix_multiselection.py  fix_restore_remote_decks.py  global_student_config_dialog.py  image_processor.py  image_processor_config_dialog.py  image_processor_script.py  main.py  name_consistency_manager.py  note_processor.py  parseRemoteDeck.py  (+12 more)
src/sheets2anki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stubs/: __init__.py  anki.py  aqt.py  aqt_backup.py  aqt_clean.py  requests.py
stubs/aqt/: __init__.py  importing.py  qt.py  utils.py
tests/: README.md  README_TEST_DATA.md  RESUMO.md  STATUS.md  __init__.py  conftest.py  debug_formula_function.py  debug_gid.py  debug_template.py  migrate_to_consolidated.py  run_all_tests.py  run_tests.py  test_backup_fix.py  test_backup_system.py  test_card_templates.py  test_case_insensitive.py  test_compatibility.py  test_config.py  test_config_manager.py  test_data_consolidated.tsv  test_data_helpers.py  test_data_processor.py  test_data_validation.py  test_debug_sync.py  test_deck_configurations.py  test_deck_naming.py  test_deck_sync_counting.py  test_deck_verification.py  test_dialog.py  test_disconnect_dialog.py  test_empty_subdeck_removal.py  test_final.py  test_fix_multiselection.py  test_formula_advanced.py  test_formula_errors.py  test_formula_errors_simple.py  test_formula_integration.py  test_ignored_cards.py  test_image_processor.py  test_import_strategy.py  (+26 more)
tests/debug/: debug_suite.py
tests/docs/: MIGRATION_GUIDE.md  STRUCTURE.md
tests/integration/: __init__.py  test_deck_creation.py  test_integration.py
tests/unit/: __init__.py  test_basic.py  test_formula_cleaning.py  test_subdeck_manager.py  test_sync_selective.py  test_url_validation.py
tests/workflow/: test_workflow.py
